--- a/securities-web-app/.eslintrc.json
+++ b/securities-web-app/.eslintrc.json
@@ -1,3 +1,53 @@
 {
-  "extends": "next/core-web-vitals"
+  "parser": "@typescript-eslint/parser",
+  "extends": ["eslint:recommended", "next/core-web-vitals", "prettier"],
+  "plugins": ["@typescript-eslint", "prettier"],
+  "parserOptions": {
+    "ecmaVersion": "latest"
+  },
+  "rules": {
+    "prettier/prettier": "warn",
+    "comma-dangle": "off",
+    "multiline-ternary": "off",
+    "no-undef": "off",
+    "no-unused-vars": "off",
+    "no-use-before-define": "off",
+    "no-global-assign": "off",
+    "quotes": "off",
+    "react/no-unescaped-entities": "off",
+    "react/no-children-prop": "off",
+    "react/prop-types": "off",
+    "space-before-function-paren": "off",
+    "no-extra-boolean-cast": "off",
+    "no-prototype-builtins": "off",
+    "dot-notation": "off",
+    "react/jsx-key": "warn",
+    "camelcase": "warn",
+    "no-useless-catch": "warn",
+    "no-new": "warn",
+    "no-useless-escape": "warn",
+    "array-callback-return": ["warn", { "allowImplicit": true }],
+    "no-case-declarations": "off",
+    "no-unsafe-optional-chaining": "off",
+    "no-return-assign": "warn",
+    "spaced-comment": "warn",
+    "@typescript-eslint/ban-types": "warn",
+    "@typescript-eslint/ban-ts-ignore": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-member-accessibility": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/indent": "off",
+    "@typescript-eslint/member-delimiter-style": "off",
+    "@typescript-eslint/no-empty-interface": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-object-literal-type-assertion": "off",
+    "@typescript-eslint/no-var-requires": "off",
+    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-extra-non-null-assertion": "off",
+    "@typescript-eslint/no-non-null-asserted-optional-chain": "off",
+    "@typescript-eslint/no-duplicate-enum-values": "off",
+    "@typescript-eslint/no-empty-function": "warn"
+  }
 }
