--- a/securities-web-app/package.json
+++ b/securities-web-app/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-table": "^8.16.0",
+    "ag-grid-community": "^31.3.1",
+    "ag-grid-react": "^31.3.1",
+    "dayjs": "^1.11.11",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
