--- a/securities-studio/package.json
+++ b/securities-studio/package.json
@@ -7,7 +7,8 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "seed": "strapi import -f seed.tar.gz"
   },
   "devDependencies": {},
   "dependencies": {
